[package]
name = "sqlx-dbml"
version = "0.1.0-beta.2"
description = "DBML to SQLx structs compiler."
license = "MIT OR Apache-2.0"
repository = "https://github.com/apskhem/sqlx-dbml"
readme = "README.md"
authors = ["Apisit Ritreungroj <cyber1.record@gmail.com>"]
keywords = ["compiler", "sqlx"]
categories = ["database"]
edition = "2021"
exclude = [
  ".github/*",
  "tests/*",
]

[dependencies]
dbml-rs = "0.1.0-beta.2"
Inflector = "0.11"

[dev-dependencies]
sqlx = { version = "0.7", default-features = false, features = ["postgres", "macros", "rust_decimal", "json", "chrono", "uuid", "ipnetwork", "mac_address", "bit-vec"]}

[features]
default = []
